// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NoteBubble > matches snapshot with nested element child 1`] = `
<div
  class="relative inline-block rounded-2xl bg-gray p-4 shadow-sm min-w-[150px] min-h-[52px] cursor-auto"
>
  <span
    data-testid="nested"
  >
    Nested Content
  </span>
  <div
    class="absolute right-0 top-1/2 translate-x-full -translate-y-1/2"
  >
    <div
      class="h-0 w-0 border-t-8 border-b-8 border-l-8 border-t-transparent border-b-transparent border-l-gray"
    />
  </div>
</div>
`;

exports[`NoteBubble > matches snapshot with text child 1`] = `
<div
  class="relative inline-block rounded-2xl bg-gray p-4 shadow-sm min-w-[150px] min-h-[52px] cursor-auto"
>
  Snapshot Test
  <div
    class="absolute right-0 top-1/2 translate-x-full -translate-y-1/2"
  >
    <div
      class="h-0 w-0 border-t-8 border-b-8 border-l-8 border-t-transparent border-b-transparent border-l-gray"
    />
  </div>
</div>
`;
